--- a/index.html
+++ b/index.html
@@ -18,14 +18,9 @@
         <h1>GMS Mobile App</h1>
         <p>One place for all of Global Meditation Scope.</p>
 
-        <p class="view"><a href="https://github.com/darkowlzz/gmsapp">View the Project on GitHub <small>darkowlzz/gmsapp</small></a></p>
+        <p class="view"><a href="http://globalmeditationscope.com">Learn more about Global Meditation Scope</a></p>
 
-
-        <ul>
-          <li><a href="https://github.com/darkowlzz/gmsapp/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/darkowlzz/gmsapp/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/darkowlzz/gmsapp">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <a href="https://play.google.com/store/apps/details?id=space.darkowlzz.globalmeditationscope&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" /></a>
       </header>
       <section>
         <h3>
