--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
+        <img src="https://dl.dropboxusercontent.com/s/zl9rfl6fpehh047/IMG_0546%201.PNG"/>
         <h1>GMS Mobile App</h1>
         <p>One place for all of Global Meditation Scope.</p>
 
