--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="wrapper">
       <header>
         <img src="https://dl.dropboxusercontent.com/s/zl9rfl6fpehh047/IMG_0546%201.PNG"/>
-        <h1>GMS Mobile App</h1>
-        <p>One place for all of Global Meditation Scope.</p>
+        <h1 align="center">GMS Mobile App</h1>
+        <p align="center">One place for all of Global Meditation Scope.</p>
 
-        <p class="view"><a href="http://globalmeditationscope.com">Learn more about Global Meditation Scope</a></p>
+        <p class="view" align="center"><a href="http://globalmeditationscope.com">Learn more about Global Meditation Scope</a></p>
 
         <a href="https://play.google.com/store/apps/details?id=space.darkowlzz.globalmeditationscope&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" /></a>
       </header>
