--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="https://dl.dropboxusercontent.com/s/zl9rfl6fpehh047/IMG_0546%201.PNG"/>
+        <img style="display:block;margin-left:auto;margin-right:auto;" src="https://dl.dropboxusercontent.com/s/zl9rfl6fpehh047/IMG_0546%201.PNG"/>
         <h1 align="center">GMS Mobile App</h1>
         <p align="center">One place for all of Global Meditation Scope.</p>
 
