--- a/index.html
+++ b/index.html
@@ -15,39 +15,67 @@
   <body>
     <div class="wrapper">
       <header>
-        <img style="display:block;margin-left:auto;margin-right:auto;" src="https://dl.dropboxusercontent.com/s/zl9rfl6fpehh047/IMG_0546%201.PNG"/>
-        <h1 align="center">GMS Mobile App</h1>
-        <p align="center">One place for all of Global Meditation Scope.</p>
+        <h1>GMS Mobile App</h1>
+        <p>One place for all of Global Meditation Scope.</p>
 
-        <p class="view" align="center"><a href="http://globalmeditationscope.com">Learn more about Global Meditation Scope</a></p>
+        <p class="view"><a href="https://github.com/darkowlzz/gmsapp">View the Project on GitHub <small>darkowlzz/gmsapp</small></a></p>
 
-        <a href="https://play.google.com/store/apps/details?id=space.darkowlzz.globalmeditationscope&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" /></a>
+
+        <ul>
+          <li><a href="https://github.com/darkowlzz/gmsapp/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/darkowlzz/gmsapp/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/darkowlzz/gmsapp">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="why-an-app" class="anchor" href="#why-an-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why an app?</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Because mobile apps are more intimate than websites. They are with the users all the time in their devices and understand them better. They exist in the same environment and situation as the user, hence they are able to serve the users better.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="one-gms-directory" class="anchor" href="#one-gms-directory" aria-hidden="true"><span class="octicon octicon-link"></span></a>One GMS Directory</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>The mobile app serves as a directory for all the GMS hosts and meditations. Having a GMS directory offline and at a single place is pretty handy. Users are empowered with the ability to find the just right person to inspire and guide them. This directory would help people discover more inspiration. Overall, uniting the GMS soulfam <g-emoji alias="earth_africa" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f30d.png">🌍</g-emoji></p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="what-does-the-app-do" class="anchor" href="#what-does-the-app-do" aria-hidden="true"><span class="octicon octicon-link"></span></a>What does the app do?</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>The app brings together all the data about the hosts and meditations, spices them up and gives the users powerful tools to easily access and consume the data. Some of the features are:</p>
+
+<ul>
+<li>Most importantly, shows the meditation time as per the local time of the user. No more pain of time conversion <g-emoji alias="innocent" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f607.png">😇</g-emoji>
+</li>
+<li>Lists the meditations separated into various categories: breathe, move, listen, heal and create</li>
+<li>Regularly updated data. Any change in data is instantly reflected in the app when connected to the Internet.</li>
+<li>Text search to quickly search through the huge lists.</li>
+<li>Easy access to Periscope and Twitter profile of the hosts.</li>
+<li>Favorite meditation. Meditations can be favorited and moved to a separate list of favorite meditations. </li>
+<li>Notification reminder of the favorite meditations, helping remind the user of the meditation even when offline and periscope notification failure due to no Internet access <g-emoji alias="yum" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f60b.png">😋</g-emoji>
+These are some of the useful features of the app. Many more are yet to come via updates.</li>
+</ul>
+
+<h3>
+<a id="android-app-demo" class="anchor" href="#android-app-demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android App Demo</h3>
+
+<p><a href="http://www.youtube.com/watch?v=w8ww9Y6_h_8"><img src="http://img.youtube.com/vi/w8ww9Y6_h_8/0.jpg" alt="Android app demo"></a></p>
+
+<h3>
+<a id="what-about-the-ios-app" class="anchor" href="#what-about-the-ios-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>What about the iOS app?</h3>
+
+<p>iOS app is under development. It would be available in a few weeks. GMS 3 would be awesome YAY!!! <g-emoji alias="smile" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f604.png">😄</g-emoji></p>
+
+<h3>
+<a id="how-do-i-support-the-app-development" class="anchor" href="#how-do-i-support-the-app-development" aria-hidden="true"><span class="octicon octicon-link"></span></a>How do I support the app development?</h3>
+
+<p>There are a couple of ways to support the app development:</p>
+
+<ul>
+<li>Try out the app, find bugs(issues) and report them to <a href="https://github.com/darkowlzz" class="user-mention">@darkowlzz</a> on Twitter via DM or send an email to <a href="mailto:me@darkowlzz.space">me@darkowlzz.space</a>
+</li>
+<li>Suggest how the app can be made better. Send the suggestions via Twitter or email as mentioned above.</li>
+<li>Support by donating </li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/darkowlzz">darkowlzz</a></p>
@@ -55,6 +83,16 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-63771901-2");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
