--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>GMS Mobile App</h1>
-        <p>One place for all of Global Meditation Scope.</p>
+        <img style="display:block;margin-left:auto;margin-right:auto;" src="https://dl.dropboxusercontent.com/s/zl9rfl6fpehh047/IMG_0546%201.PNG"/>
+        <h1 align="center">GMS Mobile App</h1>
+        <p align="center">One place for all of Global Meditation Scope.</p>
 
-        <p class="view"><a href="https://github.com/darkowlzz/gmsapp">View the Project on GitHub <small>darkowlzz/gmsapp</small></a></p>
+        <p class="view" align="center"><a href="http://globalmeditationscope.com">Learn more about Global Meditation Scope</a></p>
 
-
-        <ul>
-          <li><a href="https://github.com/darkowlzz/gmsapp/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/darkowlzz/gmsapp/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/darkowlzz/gmsapp">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <a href="https://play.google.com/store/apps/details?id=space.darkowlzz.globalmeditationscope&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" /></a>
       </header>
       <section>
         <h3>
@@ -74,7 +70,14 @@ These are some of the useful features of the app. Many more are yet to come via 
 <li>Try out the app, find bugs(issues) and report them to <a href="https://github.com/darkowlzz" class="user-mention">@darkowlzz</a> on Twitter via DM or send an email to <a href="mailto:me@darkowlzz.space">me@darkowlzz.space</a>
 </li>
 <li>Suggest how the app can be made better. Send the suggestions via Twitter or email as mentioned above.</li>
-<li>Support by donating </li>
+<li>Support by donating 
+  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+    <input type="hidden" name="cmd" value="_s-xclick">
+    <input type="hidden" name="hosted_button_id" value="BASS5T4AVD6AA">
+    <input type="image" src="https://www.paypalobjects.com/webstatic/en_US/btn/btn_donate_pp_142x27.png" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
+    <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+  </form>
+</li>
 </ul>
       </section>
       <footer>
