--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ These are some of the useful features of the app. Many more are yet to come via 
 <h3>
 <a id="android-app-demo" class="anchor" href="#android-app-demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android App Demo</h3>
 
-<p><a href="http://www.youtube.com/watch?v=w8ww9Y6_h_8"><img src="http://img.youtube.com/vi/w8ww9Y6_h_8/0.jpg" alt="Android app demo"></a></p>
+<p><iframe width="420" height="315" src="https://www.youtube.com/embed/w8ww9Y6_h_8" frameborder="0" allowfullscreen></iframe></p>
 
 <h3>
 <a id="what-about-the-ios-app" class="anchor" href="#what-about-the-ios-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>What about the iOS app?</h3>
@@ -67,7 +67,7 @@ These are some of the useful features of the app. Many more are yet to come via 
 <p>There are a couple of ways to support the app development:</p>
 
 <ul>
-<li>Try out the app, find bugs(issues) and report them to <a href="https://github.com/darkowlzz" class="user-mention">@darkowlzz</a> on Twitter via DM or send an email to <a href="mailto:me@darkowlzz.space">me@darkowlzz.space</a>
+<li>Try out the app, find bugs(issues) and report them to <a href="https://twitter.com/darkowlzz" class="user-mention">@darkowlzz</a> on Twitter via DM or send an email to <a href="mailto:me@darkowlzz.space">me@darkowlzz.space</a>
 </li>
 <li>Suggest how the app can be made better. Send the suggestions via Twitter or email as mentioned above.</li>
 <li>Support by donating 
