--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@ These are some of the useful features of the app. Many more are yet to come via 
 <li>Try out the app, find bugs(issues) and report them to <a href="https://twitter.com/darkowlzz" class="user-mention">@darkowlzz</a> on Twitter via DM or send an email to <a href="mailto:me@darkowlzz.space">me@darkowlzz.space</a>
 </li>
 <li>Suggest how the app can be made better. Send the suggestions via Twitter or email as mentioned above.</li>
+<li>Help in translation of the apps to other languages. (More information coming soon)</li>
 <li>Support by donating 
   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
     <input type="hidden" name="cmd" value="_s-xclick">
@@ -77,11 +78,12 @@ These are some of the useful features of the app. Many more are yet to come via 
     <input type="image" src="https://www.paypalobjects.com/webstatic/en_US/btn/btn_donate_pp_142x27.png" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
     <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
   </form>
+  Use Instamojo for donations from India <a href="https://www.instamojo.com/darkowlzz/gms-app-donation/" rel="im-checkout" data-behavior="remote" data-style="light" data-text="Donate with Instamojo" data-token="d68ba0427b1c25199a9c43530f7bdeaf"></a><script src="https://d2xwmjc4uy2hr5.cloudfront.net/im-embed/im-embed.min.js"></script>
 </li>
 </ul>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/darkowlzz">darkowlzz</a></p>
+        <p>This project is maintained by <a href="https://twitter.com/darkowlzz">darkowlzz</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
