--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
 
         <p class="view" align="center"><a href="http://globalmeditationscope.com">Learn more about Global Meditation Scope</a></p>
 
+        <a href="https://play.google.com/store/apps/details?id=space.darkowlzz.globalmeditationscope&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge-border.png" /></a>
+        <!--
         <a href="https://play.google.com/store/apps/details?id=space.darkowlzz.globalmeditationscope&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-AC-global-none-all-co-pr-py-PartBadges-Oct1515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/apps/en-play-badge.png" /></a>
+        -->
       </header>
       <section>
         <h3>
 <a id="why-an-app" class="anchor" href="#why-an-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why an app?</h3>
 
-<p>Because mobile apps are more intimate than websites. They are with the users all the time in their devices and understand them better. They exist in the same environment and situation as the user, hence they are able to serve the users better.</p>
+<p>Because mobile apps are more intimate than websites. They are with the users all the time on their devices and understand them better. They exist in the same environment and situation as the user, hence they are able to serve the users better.</p>
 
 <h3>
 <a id="one-gms-directory" class="anchor" href="#one-gms-directory" aria-hidden="true"><span class="octicon octicon-link"></span></a>One GMS Directory</h3>
