--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@ These are some of the useful features of the app. Many more are yet to come via 
 <p>iOS app is under development. It would be available in a few weeks. GMS 3 would be awesome YAY!!! <g-emoji alias="smile" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f604.png">😄</g-emoji></p>
 
 <h3>
+<a id="is-it-opensource" class="anchor" href="#is-it-opensource" aria-hidden="true"><span class="octicon octicon-link"></span></a>Is it Open Source?</h3>
+
+<p>Not yet. But it would be open sourced and available on github in a week.</p>
+
+<h3>
 <a id="how-do-i-support-the-app-development" class="anchor" href="#how-do-i-support-the-app-development" aria-hidden="true"><span class="octicon octicon-link"></span></a>How do I support the app development?</h3>
 
 <p>There are a couple of ways to support the app development:</p>
