--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 <li>Lists the meditations separated into various categories: breathe, move, listen, heal and create</li>
 <li>Regularly updated data. Any change in data is instantly reflected in the app when connected to the Internet.</li>
 <li>Text search to quickly search through the huge lists.</li>
-<li>Easy access to Periscope and Twitter profile of the hosts.</li>
+<li>Easy access to Periscope and Twitter profiles of the hosts.</li>
 <li>Favorite meditation. Meditations can be favorited and moved to a separate list of favorite meditations. </li>
-<li>Notification reminder of the favorite meditations, helping remind the user of the meditation even when offline and periscope notification failure due to no Internet access <g-emoji alias="yum" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f60b.png">😋</g-emoji>
-These are some of the useful features of the app. Many more are yet to come via updates.</li>
+<li>Notification reminder of the favorite meditations, helping remind the user of the meditation even when offline and periscope notification failure due to no Internet access <g-emoji alias="yum" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f60b.png">😋</g-emoji></li>
 </ul>
+<p>These are some of the useful features of the app. Many more are yet to come via updates.</p>
 
 <h3>
 <a id="android-app-demo" class="anchor" href="#android-app-demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Android App Demo</h3>
