--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
         -->
       </header>
       <section>
+        
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- gms ad 1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6645009643978251"
+     data-ad-slot="8705070325"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+        
         <h3>
 <a id="why-an-app" class="anchor" href="#why-an-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why an app?</h3>
 
@@ -88,6 +100,19 @@
   </form>
 </li>
 </ul>
+<br><br>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- gms ad 2 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6645009643978251"
+     data-ad-slot="2658536729"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://twitter.com/darkowlzz">darkowlzz</a></p>
