--- a/index.html
+++ b/index.html
@@ -27,17 +27,6 @@
         -->
       </header>
       <section>
-        
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- gms ad 1 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6645009643978251"
-     data-ad-slot="8705070325"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
 <br><br>
 
@@ -73,15 +62,17 @@
 
 <p><iframe width="420" height="315" src="https://www.youtube.com/embed/w8ww9Y6_h_8" frameborder="0" allowfullscreen></iframe></p>
 
+<!--
 <h3>
 <a id="what-about-the-ios-app" class="anchor" href="#what-about-the-ios-app" aria-hidden="true"><span class="octicon octicon-link"></span></a>What about the iOS app?</h3>
 
 <p>iOS app is under development. It would be available in a few weeks. GMS 3 would be awesome YAY!!! <g-emoji alias="smile" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f604.png">😄</g-emoji></p>
+-->
 
 <h3>
 <a id="is-it-opensource" class="anchor" href="#is-it-opensource" aria-hidden="true"><span class="octicon octicon-link"></span></a>Is it Open Source?</h3>
 
-<p>Not yet. But it would be open sourced and available on github in a week.</p>
+<p>Yes, checkout the project on [github](https://github.com/darkowlzz/gmsapp).</p>
 
 <h3>
 <a id="how-do-i-support-the-app-development" class="anchor" href="#how-do-i-support-the-app-development" aria-hidden="true"><span class="octicon octicon-link"></span></a>How do I support the app development?</h3>
@@ -92,7 +83,7 @@
 <li>Try out the app, find bugs(issues) and report them to <a href="https://twitter.com/darkowlzz" class="user-mention">@darkowlzz</a> on Twitter via DM or send an email to <a href="mailto:me@darkowlzz.space">me@darkowlzz.space</a>
 </li>
 <li>Suggest how the app can be made better. Send the suggestions via Twitter or email as mentioned above.</li>
-<li>Help in translation of the apps to other languages. (More information coming soon)</li>
+<li>Help in translation of the apps to other languages.</li>
 <li>Support by donating 
   <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
     <input type="hidden" name="cmd" value="_s-xclick">
@@ -103,17 +94,6 @@
 </li>
 </ul>
 <br><br>
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- gms ad 2 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-6645009643978251"
-     data-ad-slot="2658536729"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
       </section>
       <footer>
